# llzk-rs

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix
.github/: CODEOWNERS
.github/actions/install-pcl-mlir/: action.yml
.github/workflows/: ci-asan.yml  ci-nix.yml  ci.yml  notify-on-llzk-lib-bump-failure.yml
frontends/halo2-circuits/src/lookup/: two_by_three.rs  two_by_three_fixed.rs  two_by_three_zerosel.rs
frontends/halo2-midnight/src/: macros.rs  plonk.rs
frontends/halo2/src/: gates.rs  lookups.rs
llzk/: Cargo.toml
llzk-macro/: Cargo.toml
llzk-macro/src/: lib.rs  parse.rs  pass.rs
llzk-macro/src/parse/: identifier_list.rs  pass_set.rs
llzk-sys/: Cargo.toml  build.rs  wrapper.h
llzk-sys/build-support/: Cargo.toml
llzk-sys/build-support/src/: cargo_commands.rs  compile_commands.rs  default.rs  lib.rs  llzk.rs  mlir.rs  pcl.rs  wrap_static_fns.rs
llzk-sys/src/: lib.rs
llzk-sys/src/sanity_tests/: constants.rs  mod.rs  transforms.rs  typing.rs  validators.rs
llzk/examples/: division.rs
llzk/src/: affine.rs  attributes.rs  builder.rs  context.rs  error.rs  lib.rs  macros.rs  map_operands.rs  operation.rs  passes.rs  prelude.rs  symbol_lookup.rs  symbol_ref.rs  symbol_table.rs  target.rs  targets.rs  type_ext.rs  typing.rs  utils.rs  value_ext.rs
llzk/src/attributes/: array.rs
llzk/src/dialect/: mod.rs
llzk/tests/: array_dialect.rs  bool_dialect.rs  cast_dialect.rs  felt_dialect.rs  function_dialect.rs  llzk_dialect.rs  pod_dialect.rs  poly_dialect.rs  struct_dialect.rs  symbol_ref.rs  symbol_table.rs  typing.rs  value_ext.rs  verif_dialect.rs
llzk/tests/common/: mod.rs
llzk/tests/expected/: call_op_self_value_of_compute.mlir  empty_struct.mlir  empty_struct_with_one_param.mlir  empty_struct_with_pub_inputs.mlir  function_call.mlir  signal_struct.mlir  struct_with_one_field.mlir  struct_with_one_member.mlir
picus/src/: display.rs  module.rs  opt.rs
picus/src/expr/: impls.rs  traits.rs  util.rs
picus/src/stmt/: impls.rs  traits.rs
(+91 files in other folders)
