[workspace]
members = [
  "llzk",
  "llzk-sys",
  "llzk-sys/build-support",
  "llzk-macro",
]
resolver = "2"

[workspace.dependencies]
melior-macro = "0.18.0"
melior = "0.25"
mlir-sys = "0.5.0"
ff = "0.13"

[workspace.lints.rust]
missing_debug_implementations = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
cast_lossless = "deny"
