[workspace]
members = [
  "llzk",
  "llzk-sys",
  "llzk-sys/build-support",
  "llzk-macro",
]
resolver = "2"

[workspace.dependencies]
melior-macro = "0.18.0"
melior = "0.25"
mlir-sys = "0.5.0"
ff = "0.13"

[workspace.lints.rust]
missing_debug_implementations = "deny"
unused_must_use = "deny"
missing_docs = "deny"
redundant_imports = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

cast_lossless = "deny"
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
redundant_clone = "warn"
large_enum_variant = "warn"
